CloudFormation/AWS2022_5_VPC/vpc_5_securitygroup.yaml
AWSTemplateFormatVersion: 2010-09-09
Description: Create SecurityGroup for full lab

Parameters:
    VPCStackName: # 引用VPC Stack
        Type: String
        Description: 引用VPC Stack
        MinLength: 1
        MaxLength: 255
        AllowedPattern: "^[a-zA-Z][-a-zA-Z0-9]*$"
        Default: VPC1VPC

Resources:
  # 配置SecurityGroup
  EC2SecurityGroup:
    Type: "AWS::EC2::SecurityGroup"
    Properties:
      GroupName: ec_sg
      GroupDescription: Allow HTTP and SSH
      VpcId:
        Fn::ImportValue: !Sub ${VPCStackName}-VPCID
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
      Tags:
        - Key: Name
          Value: ec_sg

  # 配置SecurityGroup
  LBSecurityGroup:
    Type: "AWS::EC2::SecurityGroup"
    Properties:
      GroupName: lb_sg
      GroupDescription: Allow HTTP and HTTPS
      VpcId:
        Fn::ImportValue: !Sub ${VPCStackName}-VPCID
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          CidrIp: 0.0.0.0/0
      Tags:
        - Key: Name
          Value: lb_sg

  # 配置SecurityGroup
  RedisSecurityGroup:
    Type: "AWS::EC2::SecurityGroup"
    Properties:
      GroupName: redis_sg
      GroupDescription: Allow Redis
      VpcId:
        Fn::ImportValue: !Sub ${VPCStackName}-VPCID
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 6379
          ToPort: 6379
          SourceSecurityGroupId: !Ref EC2SecurityGroup
      Tags:
        - Key: Name
          Value: redis_sg

  # 配置SecurityGroup
  RDSSecurityGroup:
    Type: "AWS::EC2::SecurityGroup"
    Properties:
      GroupName: rds_sg
      GroupDescription: Allow RDS
      VpcId:
        Fn::ImportValue: !Sub ${VPCStackName}-VPCID
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 5432
          ToPort: 5432
          SourceSecurityGroupId: !Ref EC2SecurityGroup
      Tags:
        - Key: Name
          Value: rds_sg

  # 配置SecurityGroup
  EFSSecurityGroup:
    Type: "AWS::EC2::SecurityGroup"
    Properties:
      GroupName: efs_sg
      GroupDescription: Allow EFS
      VpcId:
        Fn::ImportValue: !Sub ${VPCStackName}-VPCID
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 2049
          ToPort: 2049
          SourceSecurityGroupId: !Ref EC2SecurityGroup
      Tags:
        - Key: Name
          Value: efs_sg

Outputs: # 输出内容，并且可以被其他Stack引用
    EC2SG:
        Description: The subnet ID of EC2SecurityGroup
        Value: !Ref EC2SecurityGroup
        Export:
            Name: !Sub ${AWS::StackName}-EC2SecurityGroup-ID

    LBSG:
      Description: The subnet ID of LBSecurityGroup
      Value: !Ref LBSecurityGroup
      Export:
        Name: !Sub ${AWS::StackName}-LBSecurityGroup-ID

    RedisSG:
      Description: The subnet ID of RedisSecurityGroup
      Value: !Ref RedisSecurityGroup
      Export:
        Name: !Sub ${AWS::StackName}-RedisSecurityGroup-ID

    RDSSG:
      Description: The subnet ID of RDSSecurityGroup
      Value: !Ref RDSSecurityGroup
      Export:
        Name: !Sub ${AWS::StackName}-RDSSecurityGroup-ID

    EFSSG:
      Description: The subnet ID of EFSSecurityGroup
      Value: !Ref EFSSecurityGroup
      Export:
        Name: !Sub ${AWS::StackName}-EFSSecurityGroup-ID
